Fixed z-index of footer

--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -2949,6 +2949,7 @@ a.attachment {
     padding: 5px 50%;
     position: fixed;
     right: 0;
+    z-index: 1;
 }
 .kgfooter a{color:#cacaca;}
 th.checkbox {
